@@ -2,6 +2,7 @@
 
 package edu.colorado.phet.gravityandorbits.simsharing;
 
+import java.awt.*;
 import java.io.Serializable;
 
 import edu.colorado.phet.gravityandorbits.GravityAndOrbitsApplication;
@@ -11,17 +12,22 @@ import edu.colorado.phet.gravityandorbits.GravityAndOrbitsApplication;
  */
 public class GravityAndOrbitsApplicationState implements Serializable {
 
-    private GravityAndOrbitsModuleState moduleState;
-    private long timestamp;
+    private final GravityAndOrbitsModuleState moduleState;
+    private final long timestamp;
+    private final Dimension frameSize;
 
     public GravityAndOrbitsApplicationState( GravityAndOrbitsApplication gravityAndOrbitsApplication ) {
         moduleState = new GravityAndOrbitsModuleState( gravityAndOrbitsApplication.getGravityAndOrbitsModule() );
         timestamp = System.currentTimeMillis();
+        frameSize = new Dimension( gravityAndOrbitsApplication.getPhetFrame().getWidth(), gravityAndOrbitsApplication.getPhetFrame().getHeight() );
     }
 
     public void apply( GravityAndOrbitsApplication application ) {
 //        System.out.println( "round trip time: " + ( System.currentTimeMillis() - timestamp ) );
         moduleState.apply( application.getGravityAndOrbitsModule() );
+        if ( application.getPhetFrame().getSize().width != frameSize.width || application.getPhetFrame().getSize().height != frameSize.height ) {
+            application.getPhetFrame().setSize( frameSize );
+        }
     }
 
     @Override
